--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,30 +6,61 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
-    id 'application'
-    id 'jacoco'
+	id 'application'
+	id "com.diffplug.spotless" version "7.0.0.BETA4"
+  id 'jacoco'
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
+	// Use Maven Central for resolving dependencies.
+	mavenCentral()
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation libs.junit.jupiter
+	// Use JUnit Jupiter for testing.
+	testImplementation libs.junit.jupiter
 
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // This dependency is used by the application.
-    implementation libs.guava
+	// This dependency is used by the application.
+	implementation libs.guava
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
+
+spotless {
+format("misc", {
+	// define the files to apply `misc` to
+	target("*.gradle", ".gitattributes", ".gitignore")
+
+	// define the steps to apply to those files
+	trimTrailingWhitespace()
+	indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
+	endWithNewline()
+})
+
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+	// don't need to set target, it is inferred from java
+
+	// apply a specific flavor of google-java-format
+	googleJavaFormat()
+	// fix formatting of type annotations
+	formatAnnotations()
+}
+}
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+    reports {
+        xml.required = true
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = "0.9".toBigDecimal()
+            }
+        }
     }
 }
 
@@ -58,11 +89,11 @@ check {
 }
 
 application {
-    // Define the main class for the application.
-    mainClass = 'opp.project.t4.App'
+	// Define the main class for the application.
+	mainClass = 'opp.project.t4.App'
 }
 
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+	// Use JUnit Platform for unit tests.
+	useJUnitPlatform()
 }
