--- a/capstone-project/package.json
+++ b/capstone-project/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.7",
     "next": "15.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
